name:                haskell-roguelike
version:             0.1.0.0
synopsis:            A roguelike exploring some simple systems programming in Haskell.
description:         Please see README.md
homepage:            https://github.com/crisfeo/haskell-roguelike#readme
license:             BSD3
license-file:        LICENSE
author:              CrisFeo
maintainer:          feo.cris@gmail.com
copyright:           2016 Cris Feo
category:            Console
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App, Dijkstra, Grid
  other-modules:       Dungeon, Enemy, Events, Player, State
  build-depends:       base >= 4.7 && < 5
                     , array
                     , brick
                     , microlens-platform
                     , vty
  default-language:    Haskell2010

executable haskell-roguelike-exe
  hs-source-dirs:      app
  main-is:             Roguelike.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-roguelike
  default-language:    Haskell2010

executable haskell-roguelike-dijkstra-test-exe
  hs-source-dirs:      app
  main-is:             DijkstraTest.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-roguelike
                     , brick
                     , microlens-platform
                     , vty
  default-language:    Haskell2010

test-suite haskell-roguelike-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-roguelike
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/crisfeo/haskell-roguelike
